--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^3.2.0",
     "babel-polyfill": "6.26.0",
     "chalk": "2.4.1",
     "compression": "1.7.2",
@@ -163,6 +164,7 @@
     "react-dom": "16.4.1",
     "react-helmet": "5.2.0",
     "react-intl": "2.4.0",
+    "react-jss": "^8.6.1",
     "react-loadable": "5.4.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
